Fixing a display bug on Firefox 22 / Ubuntu 12.04

--- a/styles.less
+++ b/styles.less
@@ -150,7 +150,7 @@ a {
 }
 
 #impress-step, #impressive-step {
-  .complement-bottom, .complement-top, .extra-label {
+  .complement-bottom, .complement-top{
     position: relative;
   }
   .complement-bottom, .complement-top {
@@ -169,8 +169,7 @@ a {
   }
   .extra-label {
     .emphasis;
-    padding-left: 7em;
-
+    //padding-left: 7em;
   }
 }
 
